--- a/docs/02.前端核心/04.CSS/02.CSS基础.md
+++ b/docs/02.前端核心/04.CSS/02.CSS基础.md
@@ -83,13 +83,13 @@ div + p {}
 
 ## Pseudo-classes
 ::: center
-img](~@alias/pseudo-class.png)
+![img](/imgs/pseudo-class.png)
 :::
 
 
 ## Pseudo-elements
 ::: center
-img](~@alias/pseudo-element.png)
+![img](/imgs/pseudo-element.png)
 :::
 
 
