--- a/docs/04.前端框架/02.NodeJS/02.JS与Node异同.md
+++ b/docs/04.前端框架/02.NodeJS/02.JS与Node异同.md
@@ -7,7 +7,7 @@ permalink: /pages/ca7770/
 
 ## JavaScript
 ::: center
-img](http://mufeng.web3v.work/imgs/js_node.png)
+![img](/imgs/js_node.png)
 :::
 
 
