--- a/docs/04.前端框架/04.Vue/02.Vue笔记.md
+++ b/docs/04.前端框架/04.Vue/02.Vue笔记.md
@@ -7,13 +7,13 @@ permalink: /pages/c68f27/
 
 ## Vue 双向绑定原理
 ::: center
-img](~@alias/data.png)
+![img](/imgs/data.png)
 :::
 
 
 ## Vue Render
 ::: center
-img](vue-render.png)
+![img](/imgs/vue-render.png)
 :::
 
 
